# cuda_practice

./: .gitignore  CMakeLists.txt  README.md  camera.cu  camera.cuh  common.cu  common.cuh  cuda_practice.cu  main.cu  ray.cu  shape.cu  shape.cuh  sphere.cu  test.cu  vec3double.cu  vec3double.cuh
